Fix Bluetoth permissions on MacOS
A typo in Info.plist prevented Bluetooth permissions
from being requested.

--- a/src/desktop/Info.plist
+++ b/src/desktop/Info.plist
@@ -10,7 +10,7 @@
         <key>CFBundleName</key>
         <string>bluecheese-gui</string>
         <key>CFBundleIdentifier</key>
-        <string>com.atomice.bluecheese-gui/string>
+        <string>com.atomice.bluecheese-gui</string>
         <key>CFBundleExecutable</key>
         <string>bluecheese-gui</string>
 
