Fix Windows build and deployment
- Move LIBCHESSBOARD_EXPORT to class rather than method scope.
- Add default cases to some case statements.
- Fix Windows deployment layout.
- Run windeployqt.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -52,7 +52,11 @@ endif()
 
 set_target_properties(chessboard-cli PROPERTIES OUTPUT_NAME bluecheese)
 
-install(TARGETS chessboard-cli)
+if(WIN32)
+    install(TARGETS chessboard-cli RUNTIME DESTINATION .)
+else()
+    install(TARGETS chessboard-cli)
+endif()
 
 if(COMMAND qt_add_lupdate)
     qt_add_translations(chessboard-cli
