--- a/src/desktop/CMakeLists.txt
+++ b/src/desktop/CMakeLists.txt
@@ -61,6 +61,8 @@ elseif(APPLE)
     set_target_properties(chessboard-desktop PROPERTIES MACOSX_BUNDLE TRUE)
     set_target_properties(chessboard-desktop PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)
     target_link_options(chessboard-desktop PRIVATE LINKER:-sectcreate,__TEXT,__info_plist,${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)
+else()
+    set_target_properties(chessboard-desktop PROPERTIES INSTALL_RPATH "$ORIGIN/../lib")
 endif()
 
 set(APP_NAME bluecheese-gui)
