Add feature flag for AI
- Add a feature flag for enabling the in-development
  AI feature.

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(chessboard-cli
   cliapplicationbase.h
   cliapplicationfactory.cpp
   cliapplicationfactory.h
+  clioptions.h
   connectedcliapplicationbase.cpp
   connectedcliapplicationbase.h
   discoverapplication.cpp
