--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library(chessboard-common STATIC
             guiapplicationbase.h
             guifacade.cpp
             guifacade.h
+            options.cpp
             options.h
             version.h)
 
