Add skeleton Stockfish AI
- Add skeleton support for the Stockfish chess engine.
- Add some threading-related unit tests for AiPlayer.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -43,6 +43,8 @@ add_library(chessboard-common STATIC
             options.h
             randomaiplayer.cpp
             randomaiplayer.h
+            stockfishaiplayer.cpp
+            stockfishaiplayer.h
             version.h)
 
 target_include_directories(chessboard-common PUBLIC .)
