Add build instructions
- Add build instructions to README.
- Fix install on MacOS with alternative prefix.

--- a/src/desktop/CMakeLists.txt
+++ b/src/desktop/CMakeLists.txt
@@ -78,14 +78,14 @@ if(WIN32)
     install(TARGETS chessboard-desktop RUNTIME DESTINATION .)
     install(TARGETS chessboard LIBRARY DESTINATION .)
     find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")
-    install(CODE "execute_process(COMMAND ${WINDEPLOYQT_EXECUTABLE} ${APP_NAME}.exe -verbose=1 -bluetooth WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX})")
+    install(CODE "execute_process(COMMAND ${WINDEPLOYQT_EXECUTABLE} ${APP_NAME}.exe -verbose=1 -bluetooth WORKING_DIRECTORY \${CMAKE_INSTALL_PREFIX})")
 elseif (APPLE)
     install(TARGETS chessboard-desktop BUNDLE DESTINATION .)
     find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "${_qt_bin_dir}")
     set_target_properties(chessboard-desktop PROPERTIES INSTALL_RPATH "@executable_path/../Frameworks")
     install(TARGETS chessboard LIBRARY DESTINATION ${APP_NAME}.app/Contents/Frameworks)
-    install(CODE "execute_process(COMMAND ${MACDEPLOYQT_EXECUTABLE} ${APP_NAME}.app -verbose=1 -libpath=${CMAKE_BINARY_DIR}/src/lib WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX})")
-    install(CODE "file(GLOB DYLIBS ${CMAKE_INSTALL_PREFIX}/${APP_NAME}.app/Contents/Frameworks/*)\nfile(COPY \${DYLIBS} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)")
+    install(CODE "execute_process(COMMAND ${MACDEPLOYQT_EXECUTABLE} ${APP_NAME}.app -verbose=1 -libpath=${CMAKE_BINARY_DIR}/src/lib WORKING_DIRECTORY \${CMAKE_INSTALL_PREFIX})")
+    install(CODE "file(GLOB DYLIBS \${CMAKE_INSTALL_PREFIX}/${APP_NAME}.app/Contents/Frameworks/*)\nfile(COPY \${DYLIBS} DESTINATION \${CMAKE_INSTALL_PREFIX}/lib)")
 else()
     install(TARGETS chessboard-desktop)
 endif()
