--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,14 +25,22 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04]
+        os: [ubuntu-22.04, windows-2022]
         include:
           - os: ubuntu-22.04
             qt-archives: icu
+          - os: windows-2022
+            cxx-compiler: cl
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set up Visual Studio shell
+      uses: egor-tensin/vs-shell@v2
+      with:
+        arch: x64
+      if: matrix.os == 'windows-2022'
 
     - name: Setup cmake
       uses: symbitic/install-cmake@master
@@ -52,7 +60,7 @@ jobs:
         cache: true
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DDEFAULT_STOCKFISH_PATH=stockfish -G Ninja
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DDEFAULT_STOCKFISH_PATH=stockfish ${{matrix.cxx-compiler && '-DCMAKE_CXX_COMPILER=' || ''}}${{matrix.cxx-compiler}} -G Ninja
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
