--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -70,4 +70,20 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}}
 
     - name: Install
-      run: cmake --install ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --prefix ${{github.workspace}}/install
+      run: cmake --install ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --prefix ${{github.workspace}}/bluecheese${{github.ref_name && '-' || ''}}${{github.ref_name}}
+
+    - name: Zip
+      uses: thedoctor0/zip-release@0.7.5
+      with:
+        type: 'zip'
+        filename: bluecheese${{github.ref_name && '-' || ''}}${{github.ref_name}}.zip
+        directory: ${{github.workspace}}
+        path: bluecheese${{github.ref_name && '-' || ''}}${{github.ref_name}}
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/v')
+      with:
+        generate_release_notes: true
+        draft: true
+        files: bluecheese${{github.ref_name}} && '-' || ''}}${{github.ref_name}}.zip
