--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ name: CMake
 on: [push, pull_request]
 
 env:
-  BUILD_TYPE: Debug
+  BUILD_TYPE: ${{startsWith(github.ref, 'refs/tags/v') && 'Release' || 'Debug' }}
 
 jobs:
   build:
