Add bundled Stockfish
Build Stockfish 16 along with Bluecheese and bundle it
with the app.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(chessboard LANGUAGES CXX)
 
+include(ExternalProject)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -28,11 +30,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core Bluetooth LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Bluetooth LinguistTools)
 
-set(DEFAULT_STOCKFISH_PATH "" CACHE FILEPATH "Default path to stockfish executable")
+set(DEFAULT_STOCKFISH_PATH "stockfish" CACHE FILEPATH "Default path to stockfish executable")
 
-if ("${DEFAULT_STOCKFISH_PATH}" STREQUAL "")
-    message(FATAL_ERROR "The AI support in Bluecheese requires the Stockfish engine. You must set DEFAULT_STOCKFISH_PATH to the path to the stockfish executable, or \"none\" to disable AI support.")
-endif()
+ExternalProject_Add(stockfish
+    DOWNLOAD_EXTRACT_TIMESTAMP FALSE
+    URL https://github.com/official-stockfish/Stockfish/archive/refs/tags/sf_16.zip
+    URL_HASH "SHA512=4c1ee8e36a8786392409fd0fa85d3751f6595b69529df09db3011229019a3f76b410dc84a077774ec1095c8a7bcde529db4cd0766f103ce94fc59fc186e6ee89"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND make -C <SOURCE_DIR>/src build
+    INSTALL_COMMAND make -C <SOURCE_DIR>/src install PREFIX="${CMAKE_BINARY_DIR}"
+    TEST_COMMAND "")
+install(FILES "${CMAKE_BINARY_DIR}/bin/stockfish${CMAKE_EXECUTABLE_SUFFIX}" DESTINATION bin)
 
 configure_file(config.h.in config.h)
 include_directories("${CMAKE_BINARY_DIR}")
