--- a/src/desktop/CMakeLists.txt
+++ b/src/desktop/CMakeLists.txt
@@ -87,6 +87,7 @@ elseif (APPLE)
     install(TARGETS chessboard LIBRARY DESTINATION ${APP_NAME}.app/Contents/Frameworks)
     install(CODE "execute_process(COMMAND ${MACDEPLOYQT_EXECUTABLE} ${APP_NAME}.app -verbose=1 -libpath=${CMAKE_BINARY_DIR}/src/lib WORKING_DIRECTORY \${CMAKE_INSTALL_PREFIX})")
     install(CODE "file(GLOB DYLIBS \${CMAKE_INSTALL_PREFIX}/${APP_NAME}.app/Contents/Frameworks/*)\nfile(COPY \${DYLIBS} DESTINATION \${CMAKE_INSTALL_PREFIX}/lib)")
+    install(FILES "${CMAKE_BINARY_DIR}/bin/stockfish" DESTINATION "${APP_NAME}.app/MacOS/Contents")
 else()
     install(TARGETS chessboard-desktop)
 endif()
